--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
     "test": "node --test bindings/node/*_test.js",
-    "prebuildify": "prebuildify --napi --strip"
+    "prebuildify": "prebuildify --napi --strip",
+    "postinstall": "tree-sitter generate && tree-sitter build ."
   }
 }
