--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
     "test": "node --test bindings/node/*_test.js",
-    "prebuildify": "prebuildify --napi --strip",
-    "postinstall": "tree-sitter generate && tree-sitter build ."
+    "prebuildify": "prebuildify --napi --strip"
   }
 }
