--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "scripts": {
     "install": "node-gyp-build",
+    "prepare": "node-gyp-build",
     "prestart": "tree-sitter build --wasm",
     "start": "tree-sitter playground",
     "test": "node --test bindings/node/*_test.js",
